  (Nicolás Ojeda Bär, review by Xavier Leroy)

- #9593: Use new flag for non-elevated symbolic links and test for Developer
  Mode on Windows
  (Manuel Hornung, review by David Allsopp and Nicolás Ojeda Bär)

* #9601: Return EPERM for EUNKNOWN -1314 in win32unix (principally affects
  error handling when Unix.symlink is unavailable)
  (David Allsopp, review by Xavier Leroy)

### Tools:

- #9551: ocamlobjinfo is now able to display information on .cmxs shared
  libraries natively; it no longer requires libbfd to do so
  (Nicolás Ojeda Bär, review by Daniel Bünzli, Gabriel Scherer,
   Anil Madhavapeddy, and Xavier Leroy)

- #9606, #9635, #9637: fix performance regression in the debugger
  (behaviors quadratic in the size of the debugged program)
  (Xavier Leroy, report by Jacques Garrigue and Virgile Prevosto,
  review by David Allsopp and Jacques-Henri Jourdan)

### Manual and documentation:

- #9468: HACKING.adoc: using dune to get merlin's support
  (Thomas Refis, review by Gabriel Scherer)

### Compiler user-interface and warnings:

- #1931: rely on levels to enforce principality in patterns
  (Thomas Refis and Leo White, review by Jacques Garrigue)

* #9011: Do not create .a/.lib files when creating a .cmxa with no modules.
  macOS ar doesn't support creating empty .a files (#1094) and MSVC doesn't
  permit .lib files to contain no objects. When linking with a .cmxa containing
  no modules, it is now not an error for there to be no .a/.lib file.
  (David Allsopp, review by Xavier Leroy)

- #9560: Report partial application warnings on type errors in applications.
  (Stephen Dolan, report and testcase by whitequark, review by Gabriel Scherer
   and Thomas Refis)

- #9583: when bytecode linking fails due to an unavailable module, the module
  that requires it is now included in the error message.
  (Nicolás Ojeda Bär, review by Vincent Laviron)

- #9615: Attach package type attributes to core_type.